# llm_development

./: .gitignore
local_llm/: .gitignore  README.md  config.example.yaml  pyproject.toml
local_llm/scripts/: install.sh  uninstall.sh
local_llm/src/local_llm/: __init__.py  app.py  cli.py  config.py  contracts.py  diagnostics.py
local_llm/systemd/: local-llm.service.example
local_llm/tests/: test_chunker.py  test_config.py  test_eval_capture_policy.py  test_eval_capture_redaction.py  test_ingest_transaction.py  test_no_parallel_capture_paths.py  test_packet_summary_envelope.py  test_postgres_fts.py  test_postgres_store.py  test_privacy_no_join_leakage.py  test_privacy_packet_execution.py  test_projection_service.py  test_respond_contract.py  test_retriever.py  test_safe_database_identity.py  test_store_protocol.py  test_turn_execution_single_path.py  test_turn_packet.py
local_llm/tests/fixtures/: models_manifest_qwen36.sha256  privacy_forbidden_strings.py  (+3 more)
local_llm_router/: .gitignore  README.md  config.example.yaml  prompt_wrappers.example.yaml  pyproject.toml
local_llm_router/docs/: ARCHITECTURE.md  BASELINE.md  LOCAL_PROVIDER_TEMPLATE.md  PROMPT_WRAPPERS.md  ROUTING_COMMANDS.md  SERVICE_CONTROL.md
local_llm_router/extension/: manifest.json  popup.html  popup.js  service_worker.js
local_llm_router/scripts/: discover_local_providers.py  install.sh  local_services_smoke.py  provider_dispatch_smoke.py  route_action_smoke.py  uninstall.sh
local_llm_router/systemd/: local-llm-router.service.example
local_llm_router/web/: draft_inbox.html
wvmr/: wvmr.sh
(+216 files in other folders)
