[project]
name = "local-llm-router"
version = "0.4.0"
description = "Host-local LLM provider connector router with browser adapters and local draft inbox"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
]

[project.scripts]
local-llm-router = "local_llm_router.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"